<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expenses_view"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/item"
            android:layout_width="160dp"
            android:layout_height="30dp"
            style="@style/list_view_item"
            android:text="@string/dummy_item"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/list_view_date"
            android:text="@string/dummy_date"/>
        <TextView
            android:id="@+id/transactionType"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/list_view_transactionType"
            android:text="@string/dummy_transactionType"/>
        <TextView
            android:id="@+id/cost"
            android:layout_width="70dp"
            android:layout_height="30dp"
            style="@style/list_view_cost"
            android:text="@string/dummy_cost"/>
</LinearLayout>