<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" style="@style/month_list_bg" android:id="@+id/singleMonthView">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/jan_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/jan"/>
        <TextView
            android:id="@+id/jan_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/feb_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/feb"/>
        <TextView
            android:id="@+id/feb_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mar_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/mar"/>
        <TextView
            android:id="@+id/mar_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/apr_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/apr"/>
        <TextView
            android:id="@+id/apr_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/may_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/may"/>
        <TextView
            android:id="@+id/may_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/jun_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/jun"/>
        <TextView
            android:id="@+id/jun_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/jul_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/jul"/>
        <TextView
            android:id="@+id/jul_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/aug_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/aug"/>
        <TextView
            android:id="@+id/aug_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sept_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/sept"/>
        <TextView
            android:id="@+id/sept_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/oct_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/oct"/>
        <TextView
            android:id="@+id/oct_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nov_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/nov"/>
        <TextView
            android:id="@+id/nov_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dec_month"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/month_view"
            android:text="@string/dec"/>
        <TextView
            android:id="@+id/dec_total_cost"
            android:layout_width="160dp"
            android:layout_height="35dp"
            style="@style/cost_view"
            android:text="@string/dummy_month_total_cost"/>
    </LinearLayout>
</LinearLayout>