<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/entry_delete_view" style="@style/shade_view"
    tools:context=".EntriesView"
    tools:showIn="@layout/activity_entries_view">

    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/prompt_view">

        <TextView
            android:id="@+id/entry_delete_message"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/entry_delete_message"
            style="@style/entry_delete_message"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/entry_delete_cancel_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/entry_cancel_text"
                style="@style/entry_delete_cancel_btn"/>

            <Button
                android:id="@+id/entry_delete_delete_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/entry_delete_btn_text"
                style="@style/entry_delete_delete_btn"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>